--- a/examl/Makefile.AVX.gcc
+++ b/examl/Makefile.AVX.gcc
@@ -1,6 +1,10 @@
 # Makefile August 2006 by Alexandros Stamatakis
 # Makefile cleanup October 2006, Courtesy of Peter Cordes <peter@cordes.ca>
 
+
+GITVERSION:=$(shell cat version.h   | cut -f 3 -d ' ' | tr -d '"')
+
+
 CC = mpicc
 
 CFLAGS = -D__SIM_SSE3 -D__AVX -D_OPTIMIZED_FUNCTIONS -msse3 -D_GNU_SOURCE -O2 -fomit-frame-pointer -funroll-loops -D_USE_ALLREDUCE #-Wall -pedantic -Wunused-parameter -Wredundant-decls  -Wreturn-type  -Wswitch-default -Wunused-value -Wimplicit  -Wimplicit-function-declaration  -Wimplicit-int -Wimport  -Wunused  -Wunused-function  -Wunused-label -Wno-int-to-pointer-cast -Wbad-function-cast  -Wmissing-declarations -Wmissing-prototypes  -Wnested-externs  -Wold-style-definition -Wstrict-prototypes  -Wdeclaration-after-statement -Wpointer-sign -Wextra -Wredundant-decls -Wunused -Wunused-function -Wunused-parameter -Wunused-value  -Wunused-variable -Wformat  -Wformat-nonliteral -Wparentheses -Wsequence-point -Wuninitialized -Wundef -Wbad-function-cast
@@ -12,11 +16,13 @@ RM = rm -f
 
 objs    = axml.o optimizeModel.o trash.o searchAlgo.o topologies.o treeIO.o models.o evaluatePartialGenericSpecial.o evaluateGenericSpecial.o newviewGenericSpecial.o makenewzGenericSpecial.o bipartitionList.o restartHashTable.o avxLikelihood.o
 
-all : examl-AVX
+all : $(TARGET)
 
 GLOBAL_DEPS = axml.h globalVariables.h
 
-examl-AVX : $(objs)
+TARGET := examl-AVX-$(GITVERSION)
+
+$(TARGET) : $(objs)
 	$(CC) -o examl-AVX $(objs) $(LIBRARIES) 
 
 avxLikelihood.o : avxLikelihood.c $(GLOBAL_DEPS)
@@ -41,4 +47,7 @@ restartHashTable.o : restartHashTable.c $(GLOBAL_DEPS)
 
 
 clean : 
-	$(RM) *.o examl-AVX
+	$(RM) *.o $(TARGET)
+
+
+include Makefile.version
