implemented single branch length proposal. started to generalize the proposal apply/reset dispatch. added c port of ivy_mike::perf_timer

--- a/examl/Makefile.SSE3.gcc
+++ b/examl/Makefile.SSE3.gcc
@@ -16,7 +16,7 @@ objs    = axml.o optimizeModel.o trash.o searchAlgo.o topologies.o  treeIO.o mod
 
 all : examl
 
-GLOBAL_DEPS = axml.h globalVariables.h
+GLOBAL_DEPS = axml.h globalVariables.h cycle.h
 
 examl : $(objs)
 	$(CC) -o examl $(objs) $(LIBRARIES) 
