added code for time measurements, avx configure should work now

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,7 +10,7 @@ CFLAGS=
 CXXFLAGS=
 
 
-FEATURE_FLAGS=-D_USE_ALLREDUCE -D_HYBRID
+FEATURE_FLAGS=-D_USE_ALLREDUCE -D_HYBRID -D_MEASURE_TIME
 
 
 AM_CFLAGS=-D__SIM_SSE3 -msse3 -D_GNU_SOURCE  -D_OPTIMIZED_FUNCTIONS
