--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,7 @@ LANG_FLAGS=-std=gnu99 # because of asm
 
 
 # TODO they cannot be serious with that...this is the only way of getting rid of the default -O2 -g  
-CFLAGS=
+CFLAGS= 
 CXXFLAGS=
 
 
@@ -19,7 +19,7 @@ if WITH_DEBUG
 AM_CFLAGS+=-g3 -O0
 AM_CFLAGS+= -D_DEBUG
 else
-AM_CFLAGS+=-O2 -fomit-frame-pointer -funroll-loops
+AM_CFLAGS+=-O2 -fomit-frame-pointer -funroll-loops -march=native
 endif
 
 if PRODUCTIVE
@@ -35,5 +35,10 @@ AM_LDFLAGS = -lm
 CC=mpicc
 
 bin_PROGRAMS=exaML
-exaML_SOURCES= examl/axml.c  examl/evaluatePartialGenericSpecial.c examl/genericData.c examl/models.c examl/optimizeModel.c examl/searchAlgo.c examl/topologies.c examl/treeIO.c  examl/evaluateGenericSpecial.c  examl/faultTolerance.c examl/makenewzGenericSpecial.c examl/newviewGenericSpecial.c examl/restartHashTable.c examl/thread.c examl/tree.c examl/bipartitionList.c examl/avxLikelihood.c
+exaML_SOURCES= examl/axml.c  examl/evaluatePartialGenericSpecial.c examl/genericData.c examl/models.c examl/optimizeModel.c examl/searchAlgo.c examl/topologies.c examl/treeIO.c  examl/evaluateGenericSpecial.c  examl/faultTolerance.c examl/makenewzGenericSpecial.c examl/newviewGenericSpecial.c examl/restartHashTable.c examl/thread.c examl/tree.c examl/bipartitionList.c
 
+
+if WITH_AVX
+ AM_CFLAGS += -mavx 
+ exaML_SOURCES +=  examl/avxLikelihood.c
+endif
