--- a/configure.ac
+++ b/configure.ac
@@ -43,9 +43,10 @@ AC_ARG_ENABLE(debug,
    esac],
   [WITH_DEBUG="no"]
 )
+
 AM_CONDITIONAL([WITH_DEBUG], [test  "x$WITH_DEBUG" = "xyes"])
 
-AM_CONDITIONAL([WITH_AVX], [test "$ax_cv_have_avx_ext" = "xyes" ] ) 
+AM_CONDITIONAL([WITH_AVX], [test "x$ax_cv_have_avx_ext" = "xyes" ] ) 
 
 AC_ARG_ENABLE(productive,
   [ --disable-productive    developmental version of the code ],
